Refactored code structure

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/main_text"
-        tools:context=".MainActivity" />
+        tools:context=".activity.MainActivity" />
 
     <EditText
         android:id="@+id/editText1"
