--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -10,7 +10,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/your_score_is"
-        tools:context=".ScoreActivity" />
+        tools:context=".activity.ScoreActivity" />
 
     <TextView
         android:id="@+id/textView2"
